--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasty pastries</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +17,7 @@
         <section class="hero">
             <div class="wrapper">
                 <div class="hero-content">
-                    <a href="#!" class="logo"></a>
+                    <a href="#!" class="logo" aria-label="Logo">></a>
                     <h1>
                         Tasty pastries
                     </h1>
@@ -33,10 +32,10 @@
                 </div>
                 <div class="hero-contact">
                     <div class="social">
-                        <a href="#!"><img src="./assets/vk.svg" alt=""></a>
-                        <a href="#!"><img src="./assets/facebook.svg" alt=""></a>
-                        <a href="#!"><img src="./assets/insagram.svg" alt=""></a>
-                        <a href="#!"><img src="./assets/twitter.svg" alt=""></a>
+                        <a href="#!" target="_blank"><img src="./assets/vk.svg" alt="vk"></a>
+                        <a href="#!" target="_blank"><img src="./assets/facebook.svg" alt="facebook"></a>
+                        <a href="#!" target="_blank"><img src="./assets/insagram.svg" alt="instagram"></a>
+                        <a href="#!" target="_blank"><img src="./assets/twitter.svg" alt="twitter"></a>
                     </div>
                     <div class="telephone">
                         <p>
@@ -53,23 +52,17 @@
                 <div class="work-background"></div>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the</p>
                 <h2>How we work</h2>
-                <!-- <div class="work-header">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the</p>
-                    <h2>How we work</h2>
-                </div> -->
                 <div class="work-cards">
                     <div class="work-image">
-                        <div><img src="./img/Rectangle 271.jpg" alt=""></div>
-                        <div><img src="./img/Rectangle 270.jpg" alt=""></div>
-                        <div><img src="./img/Rectangle 269.jpg" alt=""></div>
-                        <div><img src="./img/Rectangle 268.jpg" alt=""></div>
+                        <div><img src="./img/Rectangle 271.jpg" alt="image1"></div>
+                        <div><img src="./img/Rectangle 270.jpg" alt="image2"></div>
+                        <div><img src="./img/Rectangle 269.jpg" alt="image3"></div>
+                        <div><img src="./img/Rectangle 268.jpg" alt="image4"></div>
                     </div>
                     <a href="#!" class="button-primary">Contact us</a>
                 </div>
-                
             </div>
         </section>
-
     </div>
     
     <section class="about">
@@ -77,13 +70,11 @@
             <div class="about-background"></div>
             <div class="about-content">
                 <h2>About us</h2>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                </p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 <a href="#!" class="button-primary">Contact us</a>
             </div>
             <div class="about-img">
-                <img src="./img/Rectangle 275.jpg" alt="">
+                <img src="./img/Rectangle 275.jpg" alt="image5">
             </div>
         </div>
     </section>
@@ -94,7 +85,7 @@
             <div class="services-cards">
                 <div class="services-card">
                     <div>
-                        <img src="./img/Rectangle 250.jpg" alt="">
+                        <img src="./img/Rectangle 250.jpg" alt="image6">
                     </div>
                     <div>
                         <h4>Lorem Ipsum</h4>
@@ -103,7 +94,7 @@
                 </div>
                 <div class="services-card">
                     <div>
-                        <img src="./img/Rectangle 251.jpg" alt="">
+                        <img src="./img/Rectangle 251.jpg" alt="image7">
                     </div>
                     <div>
                         <h4>Lorem Ipsum</h4>
@@ -112,7 +103,7 @@
                 </div>
                 <div class="services-card">
                     <div>
-                        <img src="./img/Rectangle 252.jpg" alt="">
+                        <img src="./img/Rectangle 252.jpg" alt="image8">
                     </div>
                     <div>
                         <h4>Lorem Ipsum</h4>
