--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="hero">
             <div class="wrapper">
                 <div class="hero-content">
-                    <a href="#!" class="logo" aria-label="Logo">></a>
+                    <a href="#!" class="logo" aria-label="Logo"></a>
                     <h1>
                         Tasty pastries
                     </h1>
